Ekstenzije na frontend prvi deo

--- a/AdminFrontend/src/app/SERTIFIKAT/view-all-sertifikat/view-all-sertifikat.component.html
+++ b/AdminFrontend/src/app/SERTIFIKAT/view-all-sertifikat/view-all-sertifikat.component.html
@@ -50,7 +50,7 @@
             <td>{{sertifikat.startDate}}</td>
             <td>{{sertifikat.endDate}}</td>
             <td>{{sertifikat.subjectEmail}}</td>
-            <td>{{sertifikat.korisnik.email}}</td>
+            <td>{{sertifikat.admin.email}}</td>
         </tr>
     </tbody>
 </table>
