--- a/AdminFrontend/src/app/SERTIFIKAT/view-sertifikat/view-sertifikat.component.html
+++ b/AdminFrontend/src/app/SERTIFIKAT/view-sertifikat/view-sertifikat.component.html
@@ -10,9 +10,9 @@
     </p>
     <h3>Issuer</h3>
     <p>
-        Ime : {{sertifikat.korisnik.ime}}<br>
-        Prezime : {{sertifikat.korisnik.prezime}}<br>
-        Email : {{sertifikat.korisnik.email}}<br>
+        Ime : {{sertifikat.admin.ime}}<br>
+        Prezime : {{sertifikat.admin.prezime}}<br>
+        Email : {{sertifikat.admin.email}}<br>
     </p>
     <div *ngIf="sertifikat.namena==='Korisnik'">
         <h3>
