--- a/AdminFrontend/src/app/navbar/navbar.component.html
+++ b/AdminFrontend/src/app/navbar/navbar.component.html
@@ -58,7 +58,7 @@
               Login
             </a>&nbsp;&nbsp;
             <a (click)="goToRegister()" *ngIf="getRole()!=='ROLE_ADMIN' && getRole()!=='ROLE_SUPERADMIN' && getRole()!=='ROLE_MUSTERIJA'" class="button is-danger">
-              Register
+              Registracija
             </a>
           </div>
           <div class="navbar-item">
