--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/create-zahtev-za-sertifikat/create-zahtev-za-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/create-zahtev-za-sertifikat/create-zahtev-za-sertifikat.component.html
@@ -88,7 +88,7 @@
         </div>
         <div class="block">
             <button type="button" class="btn btn-lg btn-outline-primary" 
-                (click)="open(ekstenzije)">
+                (click)="open(ekstenzije2)">
                 Ekstenzije
             </button>
         </div>
@@ -99,7 +99,7 @@
     </form>
 </div>
 
-<ng-template #ekstenzije let-modal>
+<ng-template #ekstenzije2 let-modal>
     <div class="modal-header">
         <h4 class="modal-title" 
             id="modal-basic-title">
@@ -130,23 +130,23 @@
             <div class="input-group">
                 <div *ngIf="templejt.authorityKeyIdentifierEkstenzije" class="block">
                     <button class="button is-danger is-outlined">Authority Key Identifier</button>&nbsp;&nbsp;
-                    <button (click)="templejt.authorityKeyIdentifierEkstenzije = false;" class="button is-danger" >X</button>
+                    <button (click)="templejt.authorityKeyIdentifierEkstenzije = false;" class="button is-danger" >X</button><br>
                 </div>
                 <div *ngIf="templejt.basicConstraintsEkstenzije" class="block">
                     <button class="button is-danger is-outlined" (click)="open(basicConstraintsEkstenzije)">Basic Constraints</button>&nbsp;&nbsp;
-                    <button (click)="templejt.basicConstraintsEkstenzije = false;" class="button is-danger" >X</button>
+                    <button (click)="templejt.basicConstraintsEkstenzije = false;" class="button is-danger" >X</button><br>
                 </div>
                 <div *ngIf="templejt.extendedKeyUsageEkstenzije" class="block">
                     <button class="button is-danger is-outlined" (click)="open(extendedKeyUsageEkstenzije)">Extended Key Usage</button>&nbsp;&nbsp;
-                    <button (click)="templejt.extendedKeyUsageEkstenzije = false;" class="button is-danger" >X</button>
+                    <button (click)="templejt.extendedKeyUsageEkstenzije = false;" class="button is-danger" >X</button><br>
                 </div>
                 <div *ngIf="templejt.keyUsageEkstenzije" class="block">
                     <button class="button is-danger is-outlined" (click)="open(keyUsageEkstenzije)">Key Usage</button>&nbsp;&nbsp;
-                    <button (click)="templejt.keyUsageEkstenzije = false;" class="button is-danger" >X</button>
+                    <button (click)="templejt.keyUsageEkstenzije = false;" class="button is-danger" >X</button><br>
                 </div>
                 <div *ngIf="templejt.subjectAlternativeNameEkstenzije" class="block">
                     <button class="button is-danger is-outlined">Subject Alternative Name</button>&nbsp;&nbsp;
-                    <button (click)="templejt.subjectAlternativeNameEkstenzije = false;" class="button is-danger" >X</button>
+                    <button (click)="templejt.subjectAlternativeNameEkstenzije = false;" class="button is-danger" >X</button><br>
                 </div>
                 <div *ngIf="templejt.subjectKeyIdentifierEkstenzije" class="block">
                     <button class="button is-danger is-outlined">Subject Key Identifier</button>&nbsp;&nbsp;
@@ -324,6 +324,98 @@
             <button type="submit"
                 class="btn btn-outline-dark" 
                 (click)="modal.close('Save click')"  [disabled]="keyUsageForm.invalid">
+                Sacuvaj
+            </button>
+        </div>
+    </form>
+</ng-template>
+
+<ng-template #subjectAlternativeNameEkstenzije let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title" 
+            id="modal-basic-title">
+            Subject Alternative Name
+        </h4>
+        <button type="button" class="close"
+                aria-label="Close" (click)=
+                "modal.dismiss('Cross click')">
+  
+            <span aria-hidden="true">
+                ×
+            </span>
+        </button>
+    </div>
+    <form [formGroup]="subjectAlternativeNameForm" (ngSubmit)="subjectAlternativeNameEkstenzijeMetoda()">
+        <div class="modal-body">
+                <div class="form-group">
+                    <div class="input-group">
+                        <div [ngClass]="['block']">
+                            <mat-checkbox formControlName="isCritical">Da li je kriticno</mat-checkbox>
+                        </div>
+                        <div [ngClass]="['block']">
+                            <button class="button is-danger is-outlined" (click)="open(alternativeNamesEkstenzija)">Dodaj Alternativni Naziv</button>
+                        </div>
+                        <div *ngFor="let name of ekstenzije.subjectAlternativeNameEkstenzije.alternativeNames" class="block">
+                            <button type="button" class="button is-danger is-outlined">
+                                {{name.generalNameType}} : {{name.generalNameContent}}
+                            </button><br>
+                        </div>
+                    </div>
+                </div>
+        </div>
+        <div [ngClass]="['modal-footer','form-group']">
+            <button type="submit"
+                class="btn btn-outline-dark" 
+                (click)="modal.close('Save click')"  [disabled]="subjectAlternativeNameForm.invalid">
+                Sacuvaj
+            </button>
+        </div>
+    </form>
+</ng-template>
+
+<ng-template #alternativeNamesEkstenzija let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title" 
+            id="modal-basic-title">
+            Alternative Name
+        </h4>
+        <button type="button" class="close"
+                aria-label="Close" (click)=
+                "modal.dismiss('Cross click')">
+  
+            <span aria-hidden="true">
+                ×
+            </span>
+        </button>
+    </div>
+    <form [formGroup]="alternativeNamesForm" (ngSubmit)="alternativeNameMetoda()">
+        <div class="modal-body">
+                <div class="form-group">
+                    <label for="generalNameContent">
+                        Vrednost
+                    </label>
+                    <div class="input-group">
+                        <div [ngClass]="['block','select is-rounded']">
+                            <select formControlName="generalNameType">
+                                <option value="DNS Name">DNS Name</option>
+                                <option value="Directory Name">Directory Name</option>
+                                <option value="IP Address">IP Address</option>
+                                <option value="Registered ID">Registered ID</option>
+                                <option value="RFC 822 Name">RFC 822 Name</option>
+                                <option value="URI">URI</option>
+                            </select>
+                        </div>
+                        
+                        <div [ngClass]="['block']">
+                            <input id="generalNameContent" type="text" [ngClass]="['form-control','input']" formControlName="generalNameContent" placeholder="">
+                        </div>
+                    </div>
+                </div>
+        </div>
+        <div [ngClass]="['modal-footer','form-group']">
+            <button type="submit"
+                class="btn btn-outline-dark" 
+                (click)="modal.close('Save click')"  [disabled]="alternativeNamesForm.invalid">
                 Sacuvaj
             </button>
         </div>
