--- a/AdminFrontend/src/app/SERTIFIKAT/view-sertifikat/view-sertifikat.component.html
+++ b/AdminFrontend/src/app/SERTIFIKAT/view-sertifikat/view-sertifikat.component.html
@@ -14,6 +14,12 @@
         Prezime : {{sertifikat.admin.prezime}}<br>
         Email : {{sertifikat.admin.email}}<br>
     </p>
+    <h3>Subject</h3>
+    <p>
+        Ime : {{sertifikat.musterija.ime}}<br>
+        Prezime : {{sertifikat.musterija.prezime}}<br>
+        Email : {{sertifikat.musterija.email}}<br>
+    </p>
     <div *ngIf="sertifikat.namena==='Korisnik'">
         <h3>
             Za korisnika sertifikat
